# simple_rte

./: .gitignore  Makefile  README.md  pyproject.toml
src/livedoor/: README.md  train_bert.py
src/rte/: README.md  train_bert.py
transformers_sandbox/livedoor/: train_bert.py
transformers_sandbox/rte/: train_bert.py
transformers_sandbox/training/: __init__.py  long_tail_classification_trainer.py
